--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<packages>
-  <package id="OpenPublishingBuild" version="0.1.0-v268-gaecd1b1" targetFramework="net45" />
+<packages> 
+  <package id="OpenPublishingBuild" version="1.0.17" targetFramework="net45" />
 </packages>
