--- a/Tools/NuGet/Nuget.Config
+++ b/Tools/NuGet/Nuget.Config
@@ -14,9 +14,9 @@
   See: NuGet.exe help update
   -->
   <packageSources>
+    <add key="Azure" value="http://capsnugetserver.cloudapp.net/nuget/" />
     <add key="NuGet official package source" value="https://nuget.org/api/v2/" />
-    <add key="Internal" value="\\B42vscssrv30\MsNuGet" />
-    <!-- <add key="Internal" value="\\msdnfs\CodeDrop\Drops\MsNuGet" /> -->
+    <add key="Internal" value="\\msdnfs\CodeDrop\Drops\MsNuGet" />
     
   </packageSources>
   <!-- used to store credentials -->
